--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "web-vitals": "^1.1.1"
   },
   "scripts": {
-    "start": "DEBUG=tracksabout-client:* react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "semistandard": "^16.0.0"
   }
 }
